# dynamo

./: .fpm  Cargo.toml  Makefile  README.md
src/: dynamo-vpc.service  dynamo.service  main.rs
vector/: test.yaml
