[package]
name = "dynamo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive", "env"] }
fakeit = "1.1.1"
futures = "0.3.28"
leaky-bucket = "0.12.4"
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["json", "gzip"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
